Fix order and z-index
As it turned out the z-index in modal popup isn't needed

--- a/resources/assets/less/base.less
+++ b/resources/assets/less/base.less
@@ -403,5 +403,6 @@ a[disabled] { &:extend(.btn[disabled]); }
   &[data-visibility="hidden"] {
     opacity: 0;
     pointer-events: none;
+    z-index: @z-index--visibility-hidden;
   }
 }
