--- a/resources/assets/less/users.less
+++ b/resources/assets/less/users.less
@@ -302,8 +302,6 @@
 
   background: #fff;
 
-  z-index: @z-index--blackout-visible;
-
   font-size: 10px;
   text-align: center;
 
